# wingpanel-indicator-nightlight

./: .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: gresource.xml  indicator.css  io.elementary.wingpanel.nightlight.gresource.xml  meson.build  nightlight.appdata.xml.in  nightlight.metainfo.xml.in
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  an.po  ar.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  cs.po  cv.po  da.po  de.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  en_ZA.po  eo.po  es.po  et.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  gl.po  ha.po  he.po  hi.po  hr.po  hu.po  id.po  io.elementary.panel.nightlight.pot  it.po  ja.po  (+38 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+165 more)
src/: CMakeLists.txt  Indicator.vala
src/Services/: ColorInterface.vala  PrefersColorSchemeInterface.vala  RateLimiter.vala  Timer.vala
src/Widgets/: PopoverWidget.vala  RevealerSwitch.vala
